tests/NormalTests/paczka1/fuzzy1/87219180.err
Error in line 9: A954 A954 87,7
Error in line 6: paHf S121 87,6
Error in line 21: A954 S121 -5,8
Error in line 20: A954 S121 84,3
